# unitree_go2w_agent_sdk

./: .gitignore  CONFIG_README.md  README.md  cleanup_ros.py  launch_ros.py  requirements.txt  robot_config.yaml
cad_parts/: BOM.csv  README.md
cad_parts/parts/steps/: Assem1.STEP  adapter_plate_camera.STEP  mount_plate.STEP  side_mount_real.STEP
cad_parts/parts/stl/: adapter_plate_camera.STL  mount_plate.STL  side_mount_real.STL
unitree_ros1/launch/: ros1_system.launch
unitree_ros1/src/HesaiLidar_ROS_2.0/config/: config.yaml
unitree_ros1/src/faster-lio/app/: run_mapping_offline.cc  run_mapping_online.cc
unitree_ros1/src/faster-lio/config/: hesai.yaml
unitree_ros1/src/piper_ros/: README.MD
unitree_ros2/: setup.sh
unitree_ros2/cyclonedds_ws/install/: local_setup.sh  setup.sh
unitree_ros2/cyclonedds_ws/log/: latest_build
unitree_ros2/launch/: realsense.launch.py  ros2_systems.launch.py  ros2_tf_publishers.launch.py
unitree_ros2/src/nav2_cloud_bringup/: local_only_nav2_view.rviz  nav2_default_view.rviz  nav2_foxy_cyclonedds.rviz  nav2_foxy_cyclonedds_SAFE.rviz  nav2_unitree_view.rviz  package.xml  setup.py
unitree_ros2/src/nav2_cloud_bringup/launch/: local_only_navigation_launch.py  nav2_cloud_sim.launch.py  nav2_params_online_fasterlio.yaml  pointcloud_nav2_params.yaml  pointcloud_navigation_launch.py  unitree_nav2.yaml
unitree_ros2/src/nav2_cloud_bringup/nav2_cloud_bringup/: move_dog.py  unitree_nav2.py
unitree_ros2/src/nav2_cloud_bringup/resource/: nav2_cloud_bringup
unitree_ros2/src/unitree_msg_converter/: package.xml  setup.cfg  setup.py
(+38 files in other folders)
